tests/negative/LacksTypeSig2.juvix
module LacksTypeSig2;

open import Stdlib.Prelude;

 x : Nat;

 y : Nat;
 y := let x := 1 in 3;

end;
